# ESP32-IoT-AWS-project

./: .gitignore  CMakeLists.txt  readme.md
include/: app_nvs.h  aws_IoT.h  dht22.h  esp_err.h  esp_event.h  esp_http_server.h  esp_log.h  esp_netif.h  esp_wifi.h  esp_wifi_types.h  http_server.h  nvs_flash.h  rgb_led.h  sntp_time_sync.h  tasks_common.h  wifi_app.h  wifi_reset_button.h
include/driver/: ledc.h
include/freertos/: FreeRTOS.h  event_groups.h  task.h
include/lwip/: netdb.h
include/sys/: socket.h
src/: app_nvs.c  aws_IoT.c  dht22.c  http_server.c  main.c  rgb_led.c  sntp_time_sync.c  wifi_app.c  wifi_reset_button.c
web/: App.css  App.js  index.html
